Replace nvidia-smi CC detection with CUDA driver API
Detect GPU compute capability at build time by dynamically loading
libcuda.so.1 (Linux) or nvcuda.dll (Windows) and calling cuInit +
cuDeviceGetAttribute directly — same approach as cuda-diagnostic.

This eliminates the nvidia-smi PATH dependency that caused silent
fallback to sm_75 on Windows, which compiled out all BF16 kernels
(gated behind __CUDA_ARCH__ >= 800) and caused severe perf regressions.

Fallback raised from sm_75 to sm_80 when no driver is available.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ documentation = "https://docs.rs/bindgen_cuda/"
 
 [dependencies]
 glob = "0.3.1"
+libloading = "0.8"
 num_cpus = "1.16.0"
 rayon = "1.8.0"
 
